samples/HERB/Block.herb
{
	var a = 1;
	write a;
}
write a; // error